atp coding manually is better than tuning reward hacking llms LOL